// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`icon > renders icon inline type with title text 1`] = `
"[36m<DocumentFragment>[39m
  [36m<svg[39m
    [33maria-labelledby[39m=[32m"s0-text"[39m
    [33mclass[39m=[32m"icon icon--mic"[39m
    [33mdata-marko-key[39m=[32m"@svg s0"[39m
    [33mfocusable[39m=[32m"false"[39m
    [33mrole[39m=[32m"img"[39m
  [36m>[39m
    [36m<title[39m
      [33mid[39m=[32m"s0-text"[39m
    [36m>[39m
      [0minline icon[0m
    [36m</title>[39m
    [36m<use[39m
      [33mhref[39m=[32m"#icon-mic"[39m
    [36m/>[39m
  [36m</svg>[39m
[36m</DocumentFragment>[39m"
`;

exports[`icon > renders icon inline type without title text 1`] = `
"[36m<DocumentFragment>[39m
  [36m<svg[39m
    [33maria-hidden[39m=[32m"true"[39m
    [33mclass[39m=[32m"icon icon--mic"[39m
    [33mdata-marko-key[39m=[32m"@svg s0"[39m
    [33mdata-testid[39m=[32m"icon"[39m
    [33mfocusable[39m=[32m"false"[39m
  [36m>[39m
    [36m<use[39m
      [33mhref[39m=[32m"#icon-mic"[39m
    [36m/>[39m
  [36m</svg>[39m
[36m</DocumentFragment>[39m"
`;

exports[`icon > renders icon no-skin-classes 1`] = `
"[36m<DocumentFragment>[39m
  [36m<svg[39m
    [33maria-hidden[39m=[32m"true"[39m
    [33mclass[39m=[32m"custom-class"[39m
    [33mdata-marko-key[39m=[32m"@svg s0"[39m
    [33mdata-testid[39m=[32m"icon"[39m
    [33mfocusable[39m=[32m"false"[39m
  [36m>[39m
    [36m<use[39m
      [33mhref[39m=[32m"#icon-mic"[39m
    [36m/>[39m
  [36m</svg>[39m
[36m</DocumentFragment>[39m"
`;

exports[`program badges > renders program badge inline type with title text 1`] = `
"[36m<DocumentFragment>[39m
  [36m<svg[39m
    [33maria-labelledby[39m=[32m"s0-text"[39m
    [33mclass[39m=[32m"program-badge program-badge--authenticity-guaranteed"[39m
    [33mdata-marko-key[39m=[32m"@svg s0"[39m
    [33mfocusable[39m=[32m"false"[39m
    [33mrole[39m=[32m"img"[39m
  [36m>[39m
    [36m<title[39m
      [33mid[39m=[32m"s0-text"[39m
    [36m>[39m
      [0minline icon[0m
    [36m</title>[39m
    [36m<use[39m
      [33mhref[39m=[32m"#program-badge-authenticity-guaranteed"[39m
    [36m/>[39m
  [36m</svg>[39m
[36m</DocumentFragment>[39m"
`;

exports[`program badges > renders program badge inline type without title text 1`] = `
"[36m<DocumentFragment>[39m
  [36m<svg[39m
    [33maria-hidden[39m=[32m"true"[39m
    [33mclass[39m=[32m"program-badge mic"[39m
    [33mdata-marko-key[39m=[32m"@svg s0"[39m
    [33mdata-testid[39m=[32m"icon"[39m
    [33mfocusable[39m=[32m"false"[39m
  [36m>[39m
    [36m<use[39m
      [33mhref[39m=[32m"#mic"[39m
    [36m/>[39m
  [36m</svg>[39m
[36m</DocumentFragment>[39m"
`;

exports[`program badges > renders program badge no-skin-classes 1`] = `
"[36m<DocumentFragment>[39m
  [36m<svg[39m
    [33maria-hidden[39m=[32m"true"[39m
    [33mclass[39m=[32m"custom-class"[39m
    [33mdata-marko-key[39m=[32m"@svg s0"[39m
    [33mdata-testid[39m=[32m"icon"[39m
    [33mfocusable[39m=[32m"false"[39m
  [36m>[39m
    [36m<use[39m
      [33mhref[39m=[32m"#mic"[39m
    [36m/>[39m
  [36m</svg>[39m
[36m</DocumentFragment>[39m"
`;
